{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 34,
  "lineage": "ecc4943b-ebb6-7ce6-50c1-151fb96717ad",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "albtf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:005202308009:loadbalancer/app/albtf/11ecd458ad8e93a9",
            "arn_suffix": "app/albtf/11ecd458ad8e93a9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "albtf-1906070285.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:005202308009:loadbalancer/app/albtf/11ecd458ad8e93a9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "albtf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-033778e341c921c80"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a21f0e906a02c9e8"
              },
              {
                "subnet_id": "subnet-0ef2bcbd1ad46e52b"
              }
            ],
            "subnets": [
              "subnet-0a21f0e906a02c9e8",
              "subnet-0ef2bcbd1ad46e52b"
            ],
            "vpc_id": "vpc-0d9e478ab78ebcbf4",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.appserver_sg",
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.db_sg",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:005202308009:listener/app/albtf/11ecd458ad8e93a9/1714b0a3b30580d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:005202308009:targetgroup/albtftg/107945765191d4fc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:005202308009:listener/app/albtf/11ecd458ad8e93a9/1714b0a3b30580d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:005202308009:loadbalancer/app/albtf/11ecd458ad8e93a9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.albtf",
            "module.alb.aws_lb_target_group.albtg",
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.appserver_sg",
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.db_sg",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:005202308009:targetgroup/albtftg/107945765191d4fc",
            "arn_suffix": "targetgroup/albtftg/107945765191d4fc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:005202308009:targetgroup/albtftg/107945765191d4fc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "albtftg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe23c115c3ba9bac",
            "arn": "arn:aws:ec2:us-east-2:005202308009:instance/i-01f154da85412bcef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f154da85412bcef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wp-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfe90409d3068ee8",
            "private_dns": "ip-10-0-1-145.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.145",
            "public_ip": "3.145.45.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04fd0f310e74b1819",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a21f0e906a02c9e8",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e32ab219c105fc73"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.appserver_sg",
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.db_sg",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:security-group/sg-033778e341c921c80",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033778e341c921c80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230125115147204100000003",
            "name_prefix": "terraform-",
            "owner_id": "005202308009",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:security-group/sg-0d4d3e05664442e21",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4d3e05664442e21",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e32ab219c105fc73"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033778e341c921c80"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033778e341c921c80"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230125115151248300000004",
            "name_prefix": "terraform-",
            "owner_id": "005202308009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "appserver_sg"
            },
            "tags_all": {
              "Name": "appserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:security-group/sg-0e32ab219c105fc73",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e32ab219c105fc73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230125115147200400000002",
            "name_prefix": "terraform-",
            "owner_id": "005202308009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:security-group/sg-0f56390469a35e991",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f56390469a35e991",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4d3e05664442e21"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230125115155351400000005",
            "name_prefix": "terraform-",
            "owner_id": "005202308009",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.appserver_sg",
            "module.sg.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020f8dbe3ecb54871",
            "domain": "vpc",
            "id": "eipalloc-020f8dbe3ecb54871",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-218-124-211.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.124.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp-tf-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:internet-gateway/igw-0e8f5eaaacf0ec223",
            "id": "igw-0e8f5eaaacf0ec223",
            "owner_id": "005202308009",
            "tags": {
              "Name": "wp-tf-ig"
            },
            "tags_all": {
              "Name": "wp-tf-ig"
            },
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wp-tf_Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wp-tf-ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020f8dbe3ecb54871",
            "connectivity_type": "public",
            "id": "nat-026066f85f642ffca",
            "network_interface_id": "eni-0cafbda3d6d97de66",
            "private_ip": "10.0.1.92",
            "public_ip": "18.218.124.211",
            "subnet_id": "subnet-0a21f0e906a02c9e8",
            "tags": {
              "Name": "wp-tf-ng"
            },
            "tags_all": {
              "Name": "wp-tf-ng"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ng",
            "module.vpc.aws_internet_gateway.wp-tf-ig",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-tf-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:route-table/rtb-0132bdf3a428d3d92",
            "id": "rtb-0132bdf3a428d3d92",
            "owner_id": "005202308009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-026066f85f642ffca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp-tf-private-rt"
            },
            "tags_all": {
              "Name": "wp-tf-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ng",
            "module.vpc.aws_internet_gateway.wp-tf-ig",
            "module.vpc.aws_nat_gateway.wp-tf-ng",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-tf-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:route-table/rtb-0bfb63a8135c679c7",
            "id": "rtb-0bfb63a8135c679c7",
            "owner_id": "005202308009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8f5eaaacf0ec223",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp-tf-public-rt"
            },
            "tags_all": {
              "Name": "wp-tf-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.wp-tf-ig",
            "module.vpc.aws_vpc.wp-tf_Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c288f4b09c65851",
            "route_table_id": "rtb-0132bdf3a428d3d92",
            "subnet_id": "subnet-0b71763eac0f2a79d"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ng",
            "module.vpc.aws_internet_gateway.wp-tf-ig",
            "module.vpc.aws_nat_gateway.wp-tf-ng",
            "module.vpc.aws_route_table.wp-tf-private-rt",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab10823f96426edd",
            "route_table_id": "rtb-0132bdf3a428d3d92",
            "subnet_id": "subnet-0645f6c4640a37fc4"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ng",
            "module.vpc.aws_internet_gateway.wp-tf-ig",
            "module.vpc.aws_nat_gateway.wp-tf-ng",
            "module.vpc.aws_route_table.wp-tf-private-rt",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039b819d488b219c2",
            "route_table_id": "rtb-0bfb63a8135c679c7",
            "subnet_id": "subnet-0a21f0e906a02c9e8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.wp-tf-ig",
            "module.vpc.aws_route_table.wp-tf-public-rt",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb7e33421377a479",
            "route_table_id": "rtb-0bfb63a8135c679c7",
            "subnet_id": "subnet-0ef2bcbd1ad46e52b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.wp-tf-ig",
            "module.vpc.aws_route_table.wp-tf-public-rt",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:subnet/subnet-0b71763eac0f2a79d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b71763eac0f2a79d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005202308009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:subnet/subnet-0645f6c4640a37fc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0645f6c4640a37fc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005202308009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:subnet/subnet-0a21f0e906a02c9e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a21f0e906a02c9e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005202308009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:subnet/subnet-0ef2bcbd1ad46e52b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef2bcbd1ad46e52b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005202308009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0d9e478ab78ebcbf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wp-tf_Vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp-tf_Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:005202308009:vpc/vpc-0d9e478ab78ebcbf4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e15ebfc15c942153",
            "default_route_table_id": "rtb-0b13c2219ba6e7099",
            "default_security_group_id": "sg-0b8c05443c049ad83",
            "dhcp_options_id": "dopt-08fa9f843ee2cfca2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9e478ab78ebcbf4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b13c2219ba6e7099",
            "owner_id": "005202308009",
            "tags": {
              "Name": "My_Vpc"
            },
            "tags_all": {
              "Name": "My_Vpc"
            }
          }
        }
      ]
    }
  ]
}